# rlwatch

./: .env.example  .gitignore  404.html  BUILD_DECISIONS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  TESTING.md  index.html  mkdocs.yml  pyproject.toml  rlwatch.yaml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml  tutorial.yml
alerts/: index.html
alerts/discord/: index.html
alerts/email/: index.html
alerts/slack/: index.html
alerts/webhook/: index.html
blog/0.3.0-launch/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
detectors/: index.html
detectors/advantage-variance/: index.html
detectors/entropy-collapse/: index.html
detectors/gradient-norm/: index.html
detectors/kl-explosion/: index.html
detectors/loss-nan/: index.html
detectors/reward-drift/: index.html
detectors/reward-hacking/: index.html
docs/: cli.md  configuration.md  contributing.md  faq.md  getting-started.md  index.md  playbook.md
docs/alerts/: discord.md  email.md  index.md  slack.md  webhook.md
docs/blog/: 0.3.0-launch.md
docs/detectors/: advantage-variance.md  entropy-collapse.md  gradient-norm.md  index.md  kl-explosion.md  loss-nan.md  reward-drift.md  reward-hacking.md
docs/tutorials/: trl-grpo-end-to-end.md
examples/: basic_usage.py  simulate_grpo_run.py  trl_grpo_tutorial.py  trl_integration.py
faq/: index.html
getting-started/: index.html
playbook/: index.html
search/: search_index.json
src/rlwatch/: __init__.py  alerts.py  cli.py  config.py  core.py  dashboard.py  detectors.py  storage.py
src/rlwatch/integrations/: __init__.py  openrlhf_logger.py  verl_tracking.py
tests/: conftest.py
tests/integration/: test_alerts_discord.py  test_alerts_email.py  test_alerts_slack.py  test_alerts_webhook.py  test_cli.py  test_config_yaml.py  test_end_to_end_manual.py  test_storage_sqlite.py  test_trl_grpo_tutorial.py  test_trl_integration.py
tests/perf/: test_check_step_latency.py  test_detector_suite_full_pipeline.py  test_log_metrics_throughput.py
tests/property/: strategies.py  test_invariants_constant_input.py  test_invariants_cooldown.py  test_invariants_monotone_healthy.py  test_invariants_none_safety.py  test_invariants_rate_limit.py  test_invariants_warmup.py
tests/simulations/: generators.py  test_replay.py
tests/unit/: test_alerts_manager.py  test_config.py  test_config_layering.py  test_core.py  test_core_attach.py  test_dashboard_extra.py  test_detectors.py  test_detectors_gradnorm.py  test_detectors_loss_nan.py  test_detectors_reward.py  test_detectors_reward_drift.py  test_framework_detection.py  test_openrlhf_integration.py  test_storage_migration.py  test_verl_integration.py
tutorials/trl-grpo-end-to-end/: index.html
