[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlwatch"
version = "0.3.0"
description = "Real-time GRPO/PPO training instability detection for ML teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Varun Saraf", email = "varunsaraf1724@gmail.com"}
]
keywords = ["reinforcement-learning", "GRPO", "PPO", "training", "monitoring", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "slack-sdk>=3.20.0",
    "click>=8.1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Streamlit dashboard. Not in core because the transitive deps are ~150MB
# and most users only need the alerting / log_step path.
dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]
torch = ["torch>=2.0.0"]
trl = ["trl>=0.7.0", "transformers>=4.35.0"]
# The end-to-end tutorial pins exact versions known-working with
# examples/trl_grpo_tutorial.py. The monthly tutorial CI cron catches
# silent breakage on future TRL releases.
tutorial = [
    "trl>=0.11.0",
    "transformers>=4.45.0",
    "torch>=2.1.0",
    "datasets>=2.14.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "responses>=0.24.0",
    # dev includes the dashboard so the dashboard tests can run.
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.scripts]
rlwatch = "rlwatch.cli:main"

[project.urls]
Homepage = "https://github.com/varun1724/rlwatch"
Documentation = "https://varun1724.github.io/rlwatch/"
Issues = "https://github.com/varun1724/rlwatch/issues"
Changelog = "https://github.com/varun1724/rlwatch/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rlwatch" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance benchmark tests (Tier 5)",
    "integration: integration tests touching real SQLite/SMTP/HTTP (Tier 4)",
    "property: Hypothesis property-based tests (Tier 2)",
    "trl: requires the [trl] extra (transformers + trl)",
    "tutorial: heavyweight end-to-end tutorial test — runs only in the dedicated tutorial.yml workflow",
]
filterwarnings = [
    "ignore::DeprecationWarning:streamlit",
]

[tool.coverage.run]
source = ["src/rlwatch"]
omit = [
    # Streamlit dashboard is hard to test in-process; covered manually + by
    # the dashboard smoke test in CI.
    "*/dashboard.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
